Added company register